--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "npm": "^6.0.0"
   },
   "dependencies": {
+    "@auth0/angular-jwt": "^2.1.0",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "@types/bootstrap": "^4.3.0",
+    "@types/jquery": "^3.3.29",
+    "angular2-flash-messages": "^3.0.1",
+    "bootstrap": "^4.3.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
@@ -17,14 +24,17 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
-    "jsonwebtoken": "^8.5.0",
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.9",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "popper.js": "^1.14.7"
   },
   "description": "Assignment",
   "main": "server.js",
